--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
     "prettier": "^2.8.0",
     "prettier-plugin-astro": "^0.7.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@astrojs/react": "^1.2.2",
+    "@astrojs/tailwind": "^2.1.3",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24"
   }
 }
