--- a/package.json
+++ b/package.json
@@ -23,12 +23,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@astrojs/react": "^1.2.2",
+    "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "svelte": "^3.46.4",
     "tailwindcss": "^3.0.24"
   }
 }
