--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,17 @@
 {
-	"printWidth": 120,
-	"semi": true,
-	"singleQuote": true,
-	"tabWidth": 2,
-	"trailingComma": "es5",
-	"useTabs": true,
-	"overrides": [
-		{
-			"files": [".*", "*.json", "*.md", "*.toml", "*.yml"],
-			"options": {
-				"useTabs": false
-			}
-		}
-	]
+  "printWidth": 120,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": true,
+  "plugins": ["prettier-plugin-svelte","prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": [".*", "*.json", "*.md", "*.toml", "*.yml"],
+      "options": {
+        "useTabs": false
+      }
+    }
+  ]
 }
