--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "prettier": "^2.8.0",
     "prettier-plugin-astro": "^0.7.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@astrojs/svelte": "^1.0.2",
     "@astrojs/tailwind": "^2.1.3",
+    "@fontsource/ubuntu": "^4.5.11",
+    "feather-icons": "^4.29.0",
     "svelte": "^3.46.4",
     "tailwindcss": "^3.0.24"
   }
