--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@fontsource/ubuntu": "^4.5.11",
     "feather-icons": "^4.29.0",
     "svelte": "^3.46.4",
+    "svelte-inview": "^3.0.1",
+    "svelte-scrollto-element": "^0.7.0",
     "tailwindcss": "^3.0.24"
   }
 }
