--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@astrojs/tailwind": "^2.1.3",
     "@fontsource/ubuntu": "^4.5.11",
     "feather-icons": "^4.29.0",
+    "gsap": "^3.11.3",
     "svelte": "^3.46.4",
     "svelte-inview": "^3.0.1",
     "svelte-scrollto-element": "^0.7.0",
